fix http codes seller
